[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Glugox <glugox@gmail.com>"]
edition = "2018"
repository = "https://github.com/glugox/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
